018 challenge little edit

--- a/2-JS-basics/018 Coding Challenge 1.html
+++ b/2-JS-basics/018 Coding Challenge 1.html
@@ -25,7 +25,7 @@
     };
     var teamDanilo = {
         name: 'Danilo\'s team',
-        scores: [970, 69, 59],
+        scores: [974, 69, 59],
         avgScore: 0
     };
 
@@ -34,7 +34,7 @@
         for (let i = 0; i < niz.length; i++) {
             sum = sum + niz[i];
         }
-        return sum;
+        return sum/niz.length;
     }
 
     function teamComparation(...params) {
