--- a/2-JS-basics/030 Coding Challenge 5.html
+++ b/2-JS-basics/030 Coding Challenge 5.html
@@ -80,7 +80,7 @@
                     maxIndex = i;
                 }
             }
-            console.log(obj[maxIndex].name + "\'s team have the biggest average tip and that number is $" + obj[maxIndex].averageTip)
+            console.log(obj[maxIndex].name + "\'s family have the biggest average tip and that number is $" + obj[maxIndex].averageTip)
         }
 
         function calculateAllToAllObjects(...objects) {
