neka glupost od mog pokusaja

--- a/5-advanced-JS/moje resenje/index.html
+++ b/5-advanced-JS/moje resenje/index.html
@@ -9,19 +9,11 @@
 <body>
 <div>
     <h1>Kviz</h1>
-    <h2 id="pitanje">pitanje</h2>
-    <div>
-        <button>dugme</button>
-    </div>
-    <div>
-        <button>dugme</button>
-    </div>
-    <div>
-        <button>dugme</button>
-    </div>
+    <h2 id="pitanje"></h2>
+    <input type="text" id="odgovor" placeholder="upisi odgovor">
 </div>
 <div>
-    <p id="counter">brojac</p>
+    <p>score: <span id="scoreCounter">0</span></p>
 </div>
 <script src="script.js"></script>
 </body>
