--- a/5-advanced-JS/moje resenje/index.html
+++ b/5-advanced-JS/moje resenje/index.html
@@ -10,7 +10,7 @@
 <div>
     <h1>Kviz</h1>
     <h2 id="pitanje"></h2>
-    <input type="text" id="odgovor" placeholder="upisi odgovor">
+    <input type="text" id="odgovor" placeholder="upisi odgovor > enter">
 </div>
 <div>
     <p>score: <span id="scoreCounter">0</span></p>
